# autoresearch

./: .gitignore  AGENTS.md  DESIGN_PLAN.md  README.md  analysis.py  prep_mnist.py  program_mnist.md  pyproject.toml  train_mnist.py
.autoresearch/: project.md
abstract/: __init__.py
eval/: evaluate.py
src/autoresearch/: __init__.py  analyze_cmd.py  check_cmd.py  cli.py  init_cmd.py
src/autoresearch/templates/: _gitignore
src/autoresearch/templates/_autoresearch/: config.yaml  global.md  prepare.md  project.md
src/autoresearch/templates/abstract/: __init__.py
src/autoresearch/templates/eval/: evaluate.py
src/autoresearch/templates/workdir/: model.py
workdir/: model.py  train.py
