[project]
name = "autoresearch"
version = "0.1.0"
description = "Framework for automated AI-driven research with measurable results"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "matplotlib>=3.5",
]

[project.scripts]
autoresearch = "autoresearch.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/autoresearch"]
