[project]
name = "autoresearch-mnist"
version = "0.1.0"
description = "Autoresearch MNIST experiment"
requires-python = ">=3.10"
dependencies = [
    "torch>=2.0",
    "torchvision>=0.15",
    "autoresearch",
]

[tool.uv.sources]
autoresearch = { git = "https://github.com/ClapeyronDigital/autoresearch.git", branch = "main" }
